Fix align / order for multiple objects

--- a/src/components/Editor.scss
+++ b/src/components/Editor.scss
@@ -170,6 +170,7 @@ $border-color: #afafb2;
   display: flex;
   position: absolute;
   border: 1px solid #ff206f;
+  z-index: 9999;
 }
 
 .vs-dot {
